--- a/wp-content/themes/mythemes/style.css
+++ b/wp-content/themes/mythemes/style.css
@@ -2333,3 +2333,55 @@ img#wpstats {
 
 		
 }
+
+/*-------------------------
+  ブログカード
+-------------------------*/
+.blog-card {
+	background: #fbfaf8;
+	border:1px solid #ddd;
+	word-wrap:break-word;
+	max-width:100%;
+	border-radius:5px;
+	margin: 30px;
+	/* sp用 ※4 */
+}
+.blog-card:hover {
+	background: #fee;
+}
+.blog-card a {
+	text-decoration: none;
+}
+.blog-card-title {
+	color: #337ab7;
+	display: block;
+}
+.blog-card-thumbnail {
+	float:left;
+	padding:10px;
+}
+.blog-card-thumbnail img {
+	display: block;
+	padding: 0;
+	-webkit-transition: 0.3s ease-in-out;
+	-moz-transition: 0.3s ease-in-out;
+	-o-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
+}
+.blog-card-content {
+	line-height:120%;
+}
+.blog-card-title {
+	padding:10px 10px 10px 0;
+	font-size:120%;
+	font-weight: bold;
+	line-height: 1.5em;
+}
+.blog-card-excerpt {
+	color:#333;
+	margin:0 10px 10px;
+	line-height: 1.5em;
+}
+.blog-card .clear {
+	clear: both;
+}
