--- a/wp-content/themes/mythemes/style.css
+++ b/wp-content/themes/mythemes/style.css
@@ -2370,6 +2370,8 @@ img#wpstats {
 }
 .blog-card-content {
 	line-height:120%;
+	height: 200px;
+	overflow: hidden;
 }
 .blog-card-title {
 	padding:10px 10px 10px 0;
@@ -2381,6 +2383,12 @@ img#wpstats {
 	color:#333;
 	margin:0 10px 10px;
 	line-height: 1.5em;
+	font-size: 14px;
+	height: 200px;
+	position: relative;
+}
+.blog-card-excerpt:before {
+
 }
 .blog-card .clear {
 	clear: both;
