--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1118,7 +1118,7 @@ p.logged-in-as {
     margin-left: 10px;
     border-bottom: none;
   }
-  .site-main article header h2.entry-content {
+  .site-main article header h2.entry-title {
     font-size: 16px;
     margin-top: 0;
   }
@@ -1138,7 +1138,7 @@ p.logged-in-as {
     margin-left: auto;
     border-bottom: 1px solid #eee;
   }
-  .site-main article:first-child header h2.entry-content {
+  .site-main article:first-child header h2.entry-title {
     font-size: 28px;
     margin-top: auto;
   }
