--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1143,3 +1143,61 @@ p.logged-in-as {
     margin-top: auto;
   }
 }
+
+/*-------------------------
+  ブログカード
+-------------------------*/
+.blog-card {
+  background: #fbfaf8;
+  border:1px solid #ddd;
+  word-wrap:break-word;
+  max-width:100%;
+  border-radius:5px;
+}
+.blog-card:hover {
+  background: #fee;
+}
+.blog-card a {
+  text-decoration: none;
+}
+.blog-card-title {
+  color: #337ab7;
+  display: block;
+}
+.blog-card-thumbnail {
+  float:left;
+  padding:10px;
+}
+.blog-card-thumbnail img {
+  display: block;
+  padding: 0;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.blog-card-content {
+  line-height:120%;
+  height: 200px;
+  overflow: hidden;
+}
+.blog-card-title {
+  padding:10px 10px 10px 0;
+  font-size:120%;
+  font-weight: bold;
+  line-height: 1.5em;
+}
+.blog-card-excerpt {
+  color:#333;
+  margin:0 10px 10px;
+  line-height: 1.5em;
+  font-size: 14px;
+  height: 200px;
+  position: relative;
+}
+.blog-card-excerpt:before {
+
+}
+.blog-card .clear {
+  clear: both;
+}
