--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1106,12 +1106,18 @@ p.logged-in-as {
 }
 
 @media (max-width: 767px) {
+  .content-area.col-sm-12.col-md-8 {
+    padding-right: 0;
+    padding-left: 0;
+  }
   .site-main article {
     display: flex;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 0;
   }
   .site-main article a img.thumbnail {
     width: 170px;
+    max-height: 127px;
   }
   .site-main article header {
     width: 50%;
@@ -1119,12 +1125,13 @@ p.logged-in-as {
     border-bottom: none;
   }
   .site-main article header h2.entry-title {
-    font-size: 16px;
+    font-size: 15px;
     margin-top: 0;
+    font-weight: 700;
   }
   .site-main article:first-child {
     display: block;
-    border-bottom: none
+    border-bottom: none;
   }
   .site-main article:first-child .entry-content {
     margin-bottom: -20px;
@@ -1132,6 +1139,7 @@ p.logged-in-as {
   .site-main article:first-child a img.thumbnail {
     margin-bottom: 0;
     width: 100%;
+    max-height: 100%;
   }
   .site-main article:first-child header {
     width: 100%;
