--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1152,7 +1152,7 @@ p.logged-in-as {
     font-size: 28px;
     margin-top: auto;
   }
-  .entry-meta span {
+  .entry-meta > span {
     display: inline-block !important;
     width: 100%;
   }
