--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1164,6 +1164,13 @@ p.logged-in-as {
   }
 }
 
+
+/*-------------------------
+  オリジナルCSS
+-------------------------*/
+.entry-content img {
+  border: 1px #9291916b solid;
+}
 /*-------------------------
   ブログカード
 -------------------------*/
