--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1174,11 +1174,12 @@ p.logged-in-as {
 
 .site-main .thumbnail {
   width: 250px;
-  heght: 195px;
+  height: 195px;
 }
 
 .site-main article {
   width: 100%;
+  height: 210px;
 }
 /*-------------------------
   ブログカード
