--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1264,13 +1264,13 @@ button.original-btn-menu {
   background: none;
   border: none;
   padding: 0;
-  width: 42px;
+  width: 49px;
   color: #333;
   letter-spacing: 0.1em;
   cursor: pointer;
   position: fixed;
-  top: 20px;
-  left: 20px;
+  top: 16px;
+  right: 16px;
   z-index: 1001;
   text-align: center;
   outline: none;
@@ -1310,3 +1310,30 @@ button.original-btn-menu.original-menu-active .original-menu {
 button.original-btn-menu.original-menu-active .original-menu-close {
   display: block;
 }
+.bg {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 999;
+  background-color: rgba(51, 51, 51, 0.5);
+  display: none;
+  top: 0;
+  left: 0;
+}
+
+@media (max-width: 767px) {
+  #logo {
+    position: absolute;
+    top: 0;
+  }
+  #logo h1 {
+    font-size: 18px;
+  }
+  p.side-description {
+    position: relative;
+    top: 32px;
+    left: 14px;
+    font-size: 11px;
+  }
+}
+
