--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1321,7 +1321,7 @@ button.original-btn-menu.original-menu-active .original-menu-close {
   left: 0;
 }
 
-.original-btn-menu {
+button.original-btn-menu {
   display: none;
 }
 @media (max-width: 767px) {
@@ -1341,8 +1341,21 @@ button.original-btn-menu.original-menu-active .original-menu-close {
   #navbar {
     margin-top: 46px;
   }
-  .original-btn-menu {
+  button.original-btn-menu {
     display: block;
   }
 }
 
+ul li {
+  line-height: 1.5;
+  padding: 0.5em 0;
+  list-style-type: none;
+}
+
+ul li:before {/*疑似要素*/
+  font-family: "Font Awesome 5 Free";
+  content: "\f138";/*アイコンの種類*/
+  position: absolute;
+  left : 1em;/*左端からのアイコンまでの距離*/
+  color: #1FA67A;/*アイコン色*/
+}
