--- a/wp-content/themes/dazzling/style.css
+++ b/wp-content/themes/dazzling/style.css
@@ -1346,15 +1346,15 @@ button.original-btn-menu {
   }
 }
 
-ul li {
+ul.main-category-list li.cat-item {
   line-height: 1.5;
   padding: 0.5em 0;
   list-style-type: none;
 }
 
-ul li:before {/*疑似要素*/
+ul.main-category-list li.cat-item:before {/*疑似要素*/
   font-family: "Font Awesome 5 Free";
-  content: "\f138";/*アイコンの種類*/
+  content: '\f115';
   position: absolute;
   left : 1em;/*左端からのアイコンまでの距離*/
   color: #1FA67A;/*アイコン色*/
